--- a/index.html
+++ b/index.html
@@ -1,11 +1,377 @@
 <!DOCTYPE html>
-<html lang="en">
- <head>
+<html lang="ko">
+  <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width">
-    <title>Document</title>
- </head>
- <body>
-    Hello world!
- </body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>나의 블로그</title>
+  </head>
+  <body>
+    <header>
+      <h1>나의 블로그</h1>
+      <p>블록체인 리터러시를 충족하는 공간</p>
+    </header>
+
+    <nav>
+      <ul>
+        <li><a href="#home">홈</a></li>
+        <li><a href="#about">소개</a></li>
+        <li><a href="#blog">블로그</a></li>
+        <li><a href="#contact">문의</a></li>
+      </ul>
+    </nav>
+
+    <main>
+      <section id="home">
+        <h2>환영합니다!</h2>
+        <p>
+          여기는 나의 블로그입니다. 이곳에서 다양한 주제로 이야기를 나눌
+          예정입니다.
+        </p>
+      </section>
+
+      <section id="about">
+        <h2>소개</h2>
+        <p>저는 블록체인 개발자로, 블록체인 개발 이야기를 기록하고 있습니다.</p>
+      </section>
+
+      <section id="blog">
+        <h2>최신 글</h2>
+        <article>
+          <h3>TIL 1 - SHA-256</h3>
+          <p>
+            SHA-256은 Secure Hash Algorithm 256-bit의 약자로, 입력 데이터를
+            고정된 256비트(32바이트) 길이의 해시 값으로 변환하는 암호화 해시
+            알고리즘입니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 2 - 스마트 계약(Smart Contract)</h3>
+          <p>
+            스마트 계약은 블록체인 상에서 실행되는 자율적인 프로그램으로, 특정
+            조건이 충족되면 자동으로 실행됩니다.
+          </p>
+          <p>
+            스마트 계약은 Solidity와 같은 프로그래밍 언어로 작성되며, 특정
+            규칙을 코딩하고 이를 블록체인에 배포하여 실행할 수 있습니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 1 - SHA-256</h3>
+          <p>
+            SHA-256은 Secure Hash Algorithm 256-bit의 약자로, 입력 데이터를
+            고정된 256비트(32바이트) 길이의 해시 값으로 변환하는 암호화 해시
+            알고리즘입니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 2 - 스마트 계약(Smart Contract)</h3>
+          <p>
+            스마트 계약은 블록체인 상에서 실행되는 자율적인 프로그램으로, 특정
+            조건이 충족되면 자동으로 실행됩니다.
+          </p>
+          <p>
+            스마트 계약은 Solidity와 같은 프로그래밍 언어로 작성되며, 특정
+            규칙을 코딩하고 이를 블록체인에 배포하여 실행할 수 있습니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 1 - SHA-256</h3>
+          <p>
+            SHA-256은 Secure Hash Algorithm 256-bit의 약자로, 입력 데이터를
+            고정된 256비트(32바이트) 길이의 해시 값으로 변환하는 암호화 해시
+            알고리즘입니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 2 - 스마트 계약(Smart Contract)</h3>
+          <p>
+            스마트 계약은 블록체인 상에서 실행되는 자율적인 프로그램으로, 특정
+            조건이 충족되면 자동으로 실행됩니다.
+          </p>
+          <p>
+            스마트 계약은 Solidity와 같은 프로그래밍 언어로 작성되며, 특정
+            규칙을 코딩하고 이를 블록체인에 배포하여 실행할 수 있습니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 1 - SHA-256</h3>
+          <p>
+            SHA-256은 Secure Hash Algorithm 256-bit의 약자로, 입력 데이터를
+            고정된 256비트(32바이트) 길이의 해시 값으로 변환하는 암호화 해시
+            알고리즘입니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 2 - 스마트 계약(Smart Contract)</h3>
+          <p>
+            스마트 계약은 블록체인 상에서 실행되는 자율적인 프로그램으로, 특정
+            조건이 충족되면 자동으로 실행됩니다.
+          </p>
+          <p>
+            스마트 계약은 Solidity와 같은 프로그래밍 언어로 작성되며, 특정
+            규칙을 코딩하고 이를 블록체인에 배포하여 실행할 수 있습니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 1 - SHA-256</h3>
+          <p>
+            SHA-256은 Secure Hash Algorithm 256-bit의 약자로, 입력 데이터를
+            고정된 256비트(32바이트) 길이의 해시 값으로 변환하는 암호화 해시
+            알고리즘입니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 2 - 스마트 계약(Smart Contract)</h3>
+          <p>
+            스마트 계약은 블록체인 상에서 실행되는 자율적인 프로그램으로, 특정
+            조건이 충족되면 자동으로 실행됩니다.
+          </p>
+          <p>
+            스마트 계약은 Solidity와 같은 프로그래밍 언어로 작성되며, 특정
+            규칙을 코딩하고 이를 블록체인에 배포하여 실행할 수 있습니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 1 - SHA-256</h3>
+          <p>
+            SHA-256은 Secure Hash Algorithm 256-bit의 약자로, 입력 데이터를
+            고정된 256비트(32바이트) 길이의 해시 값으로 변환하는 암호화 해시
+            알고리즘입니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 2 - 스마트 계약(Smart Contract)</h3>
+          <p>
+            스마트 계약은 블록체인 상에서 실행되는 자율적인 프로그램으로, 특정
+            조건이 충족되면 자동으로 실행됩니다.
+          </p>
+          <p>
+            스마트 계약은 Solidity와 같은 프로그래밍 언어로 작성되며, 특정
+            규칙을 코딩하고 이를 블록체인에 배포하여 실행할 수 있습니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 1 - SHA-256</h3>
+          <p>
+            SHA-256은 Secure Hash Algorithm 256-bit의 약자로, 입력 데이터를
+            고정된 256비트(32바이트) 길이의 해시 값으로 변환하는 암호화 해시
+            알고리즘입니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 2 - 스마트 계약(Smart Contract)</h3>
+          <p>
+            스마트 계약은 블록체인 상에서 실행되는 자율적인 프로그램으로, 특정
+            조건이 충족되면 자동으로 실행됩니다.
+          </p>
+          <p>
+            스마트 계약은 Solidity와 같은 프로그래밍 언어로 작성되며, 특정
+            규칙을 코딩하고 이를 블록체인에 배포하여 실행할 수 있습니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 1 - SHA-256</h3>
+          <p>
+            SHA-256은 Secure Hash Algorithm 256-bit의 약자로, 입력 데이터를
+            고정된 256비트(32바이트) 길이의 해시 값으로 변환하는 암호화 해시
+            알고리즘입니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 2 - 스마트 계약(Smart Contract)</h3>
+          <p>
+            스마트 계약은 블록체인 상에서 실행되는 자율적인 프로그램으로, 특정
+            조건이 충족되면 자동으로 실행됩니다.
+          </p>
+          <p>
+            스마트 계약은 Solidity와 같은 프로그래밍 언어로 작성되며, 특정
+            규칙을 코딩하고 이를 블록체인에 배포하여 실행할 수 있습니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 1 - SHA-256</h3>
+          <p>
+            SHA-256은 Secure Hash Algorithm 256-bit의 약자로, 입력 데이터를
+            고정된 256비트(32바이트) 길이의 해시 값으로 변환하는 암호화 해시
+            알고리즘입니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 2 - 스마트 계약(Smart Contract)</h3>
+          <p>
+            스마트 계약은 블록체인 상에서 실행되는 자율적인 프로그램으로, 특정
+            조건이 충족되면 자동으로 실행됩니다.
+          </p>
+          <p>
+            스마트 계약은 Solidity와 같은 프로그래밍 언어로 작성되며, 특정
+            규칙을 코딩하고 이를 블록체인에 배포하여 실행할 수 있습니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 1 - SHA-256</h3>
+          <p>
+            SHA-256은 Secure Hash Algorithm 256-bit의 약자로, 입력 데이터를
+            고정된 256비트(32바이트) 길이의 해시 값으로 변환하는 암호화 해시
+            알고리즘입니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 2 - 스마트 계약(Smart Contract)</h3>
+          <p>
+            스마트 계약은 블록체인 상에서 실행되는 자율적인 프로그램으로, 특정
+            조건이 충족되면 자동으로 실행됩니다.
+          </p>
+          <p>
+            스마트 계약은 Solidity와 같은 프로그래밍 언어로 작성되며, 특정
+            규칙을 코딩하고 이를 블록체인에 배포하여 실행할 수 있습니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 1 - SHA-256</h3>
+          <p>
+            SHA-256은 Secure Hash Algorithm 256-bit의 약자로, 입력 데이터를
+            고정된 256비트(32바이트) 길이의 해시 값으로 변환하는 암호화 해시
+            알고리즘입니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 2 - 스마트 계약(Smart Contract)</h3>
+          <p>
+            스마트 계약은 블록체인 상에서 실행되는 자율적인 프로그램으로, 특정
+            조건이 충족되면 자동으로 실행됩니다.
+          </p>
+          <p>
+            스마트 계약은 Solidity와 같은 프로그래밍 언어로 작성되며, 특정
+            규칙을 코딩하고 이를 블록체인에 배포하여 실행할 수 있습니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 1 - SHA-256</h3>
+          <p>
+            SHA-256은 Secure Hash Algorithm 256-bit의 약자로, 입력 데이터를
+            고정된 256비트(32바이트) 길이의 해시 값으로 변환하는 암호화 해시
+            알고리즘입니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 2 - 스마트 계약(Smart Contract)</h3>
+          <p>
+            스마트 계약은 블록체인 상에서 실행되는 자율적인 프로그램으로, 특정
+            조건이 충족되면 자동으로 실행됩니다.
+          </p>
+          <p>
+            스마트 계약은 Solidity와 같은 프로그래밍 언어로 작성되며, 특정
+            규칙을 코딩하고 이를 블록체인에 배포하여 실행할 수 있습니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 1 - SHA-256</h3>
+          <p>
+            SHA-256은 Secure Hash Algorithm 256-bit의 약자로, 입력 데이터를
+            고정된 256비트(32바이트) 길이의 해시 값으로 변환하는 암호화 해시
+            알고리즘입니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 2 - 스마트 계약(Smart Contract)</h3>
+          <p>
+            스마트 계약은 블록체인 상에서 실행되는 자율적인 프로그램으로, 특정
+            조건이 충족되면 자동으로 실행됩니다.
+          </p>
+          <p>
+            스마트 계약은 Solidity와 같은 프로그래밍 언어로 작성되며, 특정
+            규칙을 코딩하고 이를 블록체인에 배포하여 실행할 수 있습니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 1 - SHA-256</h3>
+          <p>
+            SHA-256은 Secure Hash Algorithm 256-bit의 약자로, 입력 데이터를
+            고정된 256비트(32바이트) 길이의 해시 값으로 변환하는 암호화 해시
+            알고리즘입니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 2 - 스마트 계약(Smart Contract)</h3>
+          <p>
+            스마트 계약은 블록체인 상에서 실행되는 자율적인 프로그램으로, 특정
+            조건이 충족되면 자동으로 실행됩니다.
+          </p>
+          <p>
+            스마트 계약은 Solidity와 같은 프로그래밍 언어로 작성되며, 특정
+            규칙을 코딩하고 이를 블록체인에 배포하여 실행할 수 있습니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 1 - SHA-256</h3>
+          <p>
+            SHA-256은 Secure Hash Algorithm 256-bit의 약자로, 입력 데이터를
+            고정된 256비트(32바이트) 길이의 해시 값으로 변환하는 암호화 해시
+            알고리즘입니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 2 - 스마트 계약(Smart Contract)</h3>
+          <p>
+            스마트 계약은 블록체인 상에서 실행되는 자율적인 프로그램으로, 특정
+            조건이 충족되면 자동으로 실행됩니다.
+          </p>
+          <p>
+            스마트 계약은 Solidity와 같은 프로그래밍 언어로 작성되며, 특정
+            규칙을 코딩하고 이를 블록체인에 배포하여 실행할 수 있습니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 1 - SHA-256</h3>
+          <p>
+            SHA-256은 Secure Hash Algorithm 256-bit의 약자로, 입력 데이터를
+            고정된 256비트(32바이트) 길이의 해시 값으로 변환하는 암호화 해시
+            알고리즘입니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 2 - 스마트 계약(Smart Contract)</h3>
+          <p>
+            스마트 계약은 블록체인 상에서 실행되는 자율적인 프로그램으로, 특정
+            조건이 충족되면 자동으로 실행됩니다.
+          </p>
+          <p>
+            스마트 계약은 Solidity와 같은 프로그래밍 언어로 작성되며, 특정
+            규칙을 코딩하고 이를 블록체인에 배포하여 실행할 수 있습니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 1 - SHA-256</h3>
+          <p>
+            SHA-256은 Secure Hash Algorithm 256-bit의 약자로, 입력 데이터를
+            고정된 256비트(32바이트) 길이의 해시 값으로 변환하는 암호화 해시
+            알고리즘입니다.
+          </p>
+        </article>
+        <article>
+          <h3>TIL 2 - 스마트 계약(Smart Contract)</h3>
+          <p>
+            스마트 계약은 블록체인 상에서 실행되는 자율적인 프로그램으로, 특정
+            조건이 충족되면 자동으로 실행됩니다.
+          </p>
+          <p>
+            스마트 계약은 Solidity와 같은 프로그래밍 언어로 작성되며, 특정
+            규칙을 코딩하고 이를 블록체인에 배포하여 실행할 수 있습니다.
+          </p>
+        </article>
+      </section>
+
+      <section id="contact">
+        <h2>문의</h2>
+        <p>
+          이메일: <a href="mailto:insu.lee@mrhi.or.kr">insu.lee@mrhi.or.kr</a>
+        </p>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2025 나의 블로그. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
